<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"    >

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/published"
            app:layout_constraintEnd_toStartOf="@+id/menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@sample/posts.json/data/author" />

        <TextView
            android:id="@+id/published"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="@dimen/common_spacing"

            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toStartOf="@+id/menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/author"
            tools:text="@sample/posts.json/data/published" />

        <ImageButton
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/menu"
            android:contentDescription="@string/description_menu"
            android:background="@android:color/transparent"
            android:padding="@dimen/common_spacing" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="72dp" />

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_spacing"
            android:autoLink="web"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            tools:text="@sample/posts.json/data/content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/videoView"
            style="@style/Widget.AppTheme.ButtonVideo"
            android:layout_width="382dp"
            android:layout_height="44dp"
            android:layout_margin="@dimen/_8"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/watch_video"
            android:text="@string/watch_video"
            android:textAllCaps="false"
            app:icon="@drawable/ic_round_play_arrow_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            style="@style/Widget.AppTheme.LikeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/description_post_like"
            app:icon="@drawable/ic_like_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videoView"
            tools:checked="@sample/posts.json/data/likedByMe"
            tools:text="@sample/posts.json/data/likes" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            style="@style/Widget.AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/description_post_share"
            app:icon="@drawable/ic_share_24"
            app:layout_constraintStart_toEndOf="@+id/like"
            app:layout_constraintTop_toTopOf="@+id/like" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/view"
            style="@style/Widget.AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/description_post_view"
            app:icon="@drawable/ic_view_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videoView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>